Define GR_GL_USE_NEW_SHADER_SOURCE_SIGNATURE to fix https://github.com/servo/servo/issues/3944.

--- a/makefile.cargo
+++ b/makefile.cargo
@@ -425,8 +425,9 @@ SKIA_UTILS_CXX_SRC=\
 endif
 
 ifeq ($(OSTYPE),android)
-        CXXFLAGS += -DSK_BUILD_FOR_ANDROID
-        CXXFLAGS += -DEGL_EGLEXT_PROTOTYPES
+	CXXFLAGS += -DEGL_EGLEXT_PROTOTYPES
+	CXXFLAGS += -DGR_GL_USE_NEW_SHADER_SOURCE_SIGNATURE
+	CXXFLAGS += -DSK_BUILD_FOR_ANDROID
 
 SKIA_GL_CXX_SRC += \
         $(addprefix src/gpu/,\
