--- a/makefile.cargo
+++ b/makefile.cargo
@@ -530,6 +530,12 @@ CXXFLAGS += \
 	-DSK_BUILD_FOR_ANDROID \
 	-DEGL_EGLEXT_PROTOTYPES
 
+# FIXME: The skia version we updated to doesn't have android FontMgr class.
+# However, this was added to skia upstream recently, so next time we update
+# skia this should be removed and have the android FontMgr source file added
+# to the makefile.
+CXXFLAGS += -DSK_FONTHOST_DOES_NOT_USE_FONTMGR=1
+
 SKIA_GL_CXX_SRC += \
 	$(addprefix src/gpu/,\
 		gl/android/GrGLCreateNativeInterface_android.cpp \
@@ -544,6 +550,7 @@ SKIA_PORTS_CXX_SRC = \
 		SkFontConfigParser_android.cpp \
 		SkFontHost_FreeType.cpp \
 		SkFontHost_FreeType_common.cpp \
+		SkFontHost_fontconfig.cpp \
 		SkGlobalInitialization_default.cpp \
 		SkImageDecoder_empty.cpp \
 		SkMemory_malloc.cpp \
