--- a/makefile.cargo
+++ b/makefile.cargo
@@ -613,6 +613,7 @@ endif
 endif
 
 SKIA_SRC = \
+	src/skia-c.cpp \
 	$(SKIA_CORE_CXX_SRC) \
 	$(SKIA_EFFECTS_CXX_SRC) \
 	$(SKIA_FONTS_CXX_SRC) \
@@ -675,6 +676,7 @@ $(OUT_DIR)/%SSE3.o: %SSE3.cpp $(OUT_DIR)/src/ports/SkAtomics_sync.h
 $(OUT_DIR)/%.o: %.cpp $(OUT_DIR)/src/ports/SkAtomics_sync.h
 	mkdir -p `dirname $@` && $(CXX) -c $(CXXFLAGS) $(PROCESSOR_EXTENSION_CXXFLAGS) -o $@ $<
 
-$(OUT_DIR)/libskia.a: $(SKIA_OBJS)
+$(OUT_DIR)/libskia.a: $(SKIA_OBJS) src/skia-c.h
 	cp -R include $(OUT_DIR)
+	cp src/skia-c.h $(OUT_DIR)/include
 	$(AR) rcs $@ $(SKIA_OBJS)
