--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ name = "skia"
 version = "0.0.20130412"
 authors = ["The Skia Project Developers and The Servo Project Developers"]
 
-build = "make -f makefile.cargo -j4"
+build = "build.rs"
 
 [dependencies.freetype-sys]
 git = "https://github.com/servo/libfreetype2"
