Get dependencies' dirs from Cargo metadata

--- a/makefile.cargo
+++ b/makefile.cargo
@@ -24,14 +24,12 @@ CXXFLAGS += \
 	-DGR_RELEASE=1
 endif
 
-FREETYPE_OUTDIR = $(shell find $(OUT_DIR)/../.. -name 'freetype-sys-*' -type d)/out
-EXPAT_OUTDIR = $(shell find $(OUT_DIR)/../.. -name 'expat-sys-*' -type d)/out
 CXXFLAGS += \
 	-fPIC \
 	-DSK_A32_SHIFT=24 -DSK_R32_SHIFT=16 -DSK_G32_SHIFT=8 -DSK_B32_SHIFT=0 \
 	-DGR_GL_USE_NEW_SHADER_SOURCE_SIGNATURE=1 \
-	-I$(FREETYPE_OUTDIR)/include \
-	-I$(EXPAT_OUTDIR)/include \
+	-I"$(DEP_FREETYPE_OUTDIR)/include" \
+	-I"$(DEP_EXPAT_OUTDIR)/include" \
 	-Iinclude/config \
 	-Iinclude/core \
 	-Iinclude/effects \
