--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ git = "https://github.com/servo/libfreetype2"
 [target.x86_64-unknown-linux-gnu.dependencies.freetype-sys]
 git = "https://github.com/servo/libfreetype2"
 
+[target.arm-unknown-linux-gnueabihf.dependencies.freetype-sys]
+git = "https://github.com/servo/libfreetype2"
+
 [target.arm-linux-androideabi.dependencies.freetype-sys]
 git = "https://github.com/servo/libfreetype2"
 
