Convert SkNativeSharedGLContext to a rust struct
This has several benefits. The first is that we can rework things so
that native surface details are passed to the struct instead of stolen
from it. This allows us to reuse native surfaces instead of having them
created each time we need a new GPU rasterization context. Because of
this the commit renames SkNativeSharedGLContext to
GPURasterizationContext.

The second benefit is that we now depend less on the internal workings of
Skia, which should make upgrading Skia much, much easier.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ links = "skia"
 build = "build.rs"
 
 [dependencies]
+euclid = "0.1"
+gleam = "0.1"
 libc = "0.1"
 
 [dependencies.expat-sys]
@@ -24,4 +26,33 @@ git = "https://github.com/servo/libfreetype2"
 [target.arm-linux-androideabi.dependencies.freetype-sys]
 git = "https://github.com/servo/libfreetype2"
 
+[target.arm-linux-androideabi.dependencies.egl]
+git = "https://github.com/servo/rust-egl"
+
+[target.i686-unknown-linux-gnu.dependencies.glx]
+git = "https://github.com/servo/rust-glx"
+
+[target.x86_64-unknown-linux-gnu.dependencies.glx]
+git = "https://github.com/servo/rust-glx"
+
+[target.arm-unknown-linux-gnueabihf.dependencies.glx]
+git = "https://github.com/servo/rust-glx"
+
+[target.i686-unknown-linux-gnu.dependencies.x11]
+version = "1.1.1"
+features = ["xlib"]
+
+[target.x86_64-unknown-linux-gnu.dependencies.x11]
+version = "1.1.1"
+features = ["xlib"]
+
+[target.arm-unknown-linux-gnueabihf.dependencies.x11]
+version = "1.1.1"
+features = ["xlib"]
+
+[target.x86_64-apple-darwin.dependencies]
+cgl = "0.1"
+
+[target.x86_64-apple-darwin.dependencies.io-surface]
+git = "https://github.com/servo/io-surface-rs"
 
