--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ git = "https://github.com/servo/libfreetype2"
 [target.arm-unknown-linux-gnueabihf.dependencies.freetype-sys]
 git = "https://github.com/servo/libfreetype2"
 
+[target.aarch64-unknown-linux-gnu.dependencies.freetype-sys]
+git = "https://github.com/servo/libfreetype2"
+
 [target.arm-linux-androideabi.dependencies.freetype-sys]
 git = "https://github.com/servo/libfreetype2"
 
@@ -38,6 +41,9 @@ git = "https://github.com/servo/rust-glx"
 [target.arm-unknown-linux-gnueabihf.dependencies.glx]
 git = "https://github.com/servo/rust-glx"
 
+[target.aarch64-unknown-linux-gnu.dependencies.glx]
+git = "https://github.com/servo/rust-glx"
+
 [target.i686-unknown-linux-gnu.dependencies.x11]
 version = "1.1.1"
 features = ["xlib"]
@@ -47,6 +53,10 @@ version = "1.1.1"
 features = ["xlib"]
 
 [target.arm-unknown-linux-gnueabihf.dependencies.x11]
+version = "1.1.1"
+features = ["xlib"]
+
+[target.aarch64-unknown-linux-gnu.dependencies.x11]
 version = "1.1.1"
 features = ["xlib"]
 
