--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ exclude = [
 euclid = "0.2"
 gleam = "0.1"
 libc = "0.1"
+glutin = "0.3.5"
 
 [dependencies.expat-sys]
 git = "https://github.com/servo/libexpat"
@@ -49,6 +50,9 @@ git = "https://github.com/servo/libfreetype2"
 git = "https://github.com/servo/libfreetype2"
 
 [target.arm-linux-androideabi.dependencies.freetype-sys]
+git = "https://github.com/servo/libfreetype2"
+
+[target.x86_64-pc-windows-gnu.freetype-sys]
 git = "https://github.com/servo/libfreetype2"
 
 [target.arm-linux-androideabi.dependencies.egl]
