--- a/makefile.cargo
+++ b/makefile.cargo
@@ -12,6 +12,13 @@ AR ?= ar
 
 endif
 
+ifneq ("$(MSYSTEM)","")
+OUT_DIR := $(shell cygpath "$(OUT_DIR)")
+else
+CXXFLAGS += -fPIC
+endif
+
+
 ifeq ($(CFG_ENABLE_DEBUG_SKIA),1)
 CXXFLAGS += \
 	-g \
@@ -27,7 +34,6 @@ CXXFLAGS += \
 endif
 
 CXXFLAGS += \
-	-fPIC \
 	-DSK_A32_SHIFT=24 -DSK_R32_SHIFT=16 -DSK_G32_SHIFT=8 -DSK_B32_SHIFT=0 \
 	-DGR_GL_USE_NEW_SHADER_SOURCE_SIGNATURE=1 \
 	-I"$(DEP_FREETYPE_OUTDIR)/include" \
@@ -51,7 +57,6 @@ CXXFLAGS += \
 	-Ithird_party/ktx \
 	-iquote src/gpu \
 	-I/usr/include/freetype2
-
 
 USE_CLANG = $(shell $(CXX) --version|grep -c 'clang')
 ifeq ($(USE_CLANG),1)
@@ -626,6 +631,61 @@ endif
 
 endif
 
+ifeq (windows,$(findstring windows,$(TARGET)))
+CXXFLAGS += \
+	-D_WIN32_WINNT=0x0600 \
+	-DSK_BUILD_FOR_WIN32 \
+	-DSK_INCLUDE_FREETYPE \
+	-Iinclude/utils/win
+
+ifeq ("$(MSYSTEM)","MINGW64")
+CXXFLAGS += \
+	-I/mingw64/include/freetype2
+endif
+
+SKIA_GL_CXX_SRC += \
+	$(addprefix src/gpu/,\
+		gl/win/GrGLCreateNativeInterface_win.cpp \
+		gl/win/SkNativeGLContext_win.cpp \
+	)
+
+SKIA_PORTS_CXX_SRC = \
+	$(addprefix src/ports/,\
+		SkDebug_win.cpp \
+		SkFontConfigInterface_direct.cpp \
+		SkFontHost_win.cpp \
+		SkFontHost_FreeType.cpp \
+		SkFontHost_FreeType_common.cpp \
+		SkFontHost_fontconfig.cpp \
+		SkGlobalInitialization_default.cpp \
+		SkImageDecoder_empty.cpp \
+		SkMemory_malloc.cpp \
+		SkOSFile_win.cpp \
+		SkOSFile_stdio.cpp \
+		SkTLS_win.cpp \
+	)
+
+#		SkTypeface_win_dw.cpp \
+#		SkFontHost_win.cpp \
+#		SkFontMgr_win_dw.cpp \
+#		SkFontMgr_default_dw.cpp \
+#		SkScalerContext_win_dw.cpp \
+
+SKIA_FONTS_CXX_SRC = \
+	$(addprefix src/fonts/,\
+		SkFontMgr_fontconfig.cpp \
+	)
+
+SKIA_UTILS_CXX_SRC += \
+	$(addprefix src/utils/win/,\
+		SkAutoCoInitialize.cpp \
+		SkDWrite.cpp \
+		SkHRESULT.cpp \
+		SkIStream.cpp \
+		SkWGL_win.cpp \
+	)
+endif
+
 SKIA_SRC = \
 	src/skia-c.cpp \
 	$(SKIA_CORE_CXX_SRC) \
@@ -707,4 +767,4 @@ $(OUT_DIR)/%.o: %.S $(OUT_DIR)/src/ports/SkAtomics_sync.h
 $(OUT_DIR)/libskia.a: $(SKIA_OBJS) src/skia-c.h
 	cp -R include $(OUT_DIR)
 	cp src/skia-c.h $(OUT_DIR)/include
-	$(AR) rcs $@ $(SKIA_OBJS)
+	cd $(OUT_DIR) && $(AR) rcs $(subst $(OUT_DIR)/,,$@) $(subst $(OUT_DIR)/,,$(SKIA_OBJS))
