--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "servo-skia"
-version = "0.20130412.0"
+version = "0.20130412.1"
 authors = ["The Skia Project Developers and The Servo Project Developers"]
 description = "2D graphic library for drawing Text, Geometries, and Images"
 license = "BSD-3-Clause"
@@ -24,7 +24,7 @@ name = "skia"
 euclid = "0.4"
 gleam = "0.1"
 libc = "0.2"
-glutin = "0.4"
+servo-glutin = "0.4"
 expat-sys = "2.1.0"
 
 [target.i686-unknown-linux-gnu.dependencies]
