--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "servo-skia"
-version = "0.20130412.1"
+version = "0.20130412.2"
 authors = ["The Skia Project Developers and The Servo Project Developers"]
 description = "2D graphic library for drawing Text, Geometries, and Images"
 license = "BSD-3-Clause"
@@ -12,7 +12,7 @@ build = "build.rs"
 exclude = [
     "experimental/*",
     "expectations/*",
-    "platform_tools/*",
+    "platform_tools/android/bin/*",
     "tools/*",
     "tests/*",
 ]
