Android: check for `android` instead of `androideabi` so android on x86 works.

--- a/makefile.cargo
+++ b/makefile.cargo
@@ -558,7 +558,7 @@ SKIA_UTILS_CXX_SRC += \
 	)
 endif
 
-ifeq (androideabi,$(findstring androideabi,$(TARGET)))
+ifeq (android,$(findstring android,$(TARGET)))
 CXXFLAGS += \
 	-DSK_BUILD_FOR_ANDROID \
 	-DEGL_EGLEXT_PROTOTYPES \
