--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "servo-skia"
-version = "0.20130412.3"
+version = "0.20130412.4"
 authors = ["The Skia Project Developers and The Servo Project Developers"]
 description = "2D graphic library for drawing Text, Geometries, and Images"
 license = "BSD-3-Clause"
@@ -25,7 +25,7 @@ euclid = "0.4"
 gleam = "0.2"
 libc = "0.2"
 servo-glutin = "0.4"
-expat-sys = "2.1.0"
+expat-sys = "2.1.1-really.0"
 
 [target.i686-unknown-linux-gnu.dependencies]
 servo-fontconfig = "0.2"
