--- a/makefile.cargo
+++ b/makefile.cargo
@@ -12,6 +12,11 @@ AR ?= ar
 
 endif
 
+ifneq (,$(CCACHE))
+CC := $(CCACHE) $(CC)
+CXX := $(CCACHE) $(CXX)
+endif
+
 ifneq ("$(MSYSTEM)","")
 OUT_DIR := $(shell cygpath "$(OUT_DIR)")
 else
