--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,45 +31,17 @@ libc = "0.2"
 servo-glutin = "0.4"
 expat-sys = "2.1.1"
 
-[target.i686-unknown-linux-gnu.dependencies]
+[target.'cfg(any(target_os = "android", target_os = "linux", target_os = "windows"))'.dependencies]
 servo-fontconfig = "0.2"
 servo-freetype-sys = "2.4.11"
+
+[target.'cfg(target_os = "linux")'.dependencies]
 x11 = { version = "2.0.0", features = ["xlib"] }
 glx = "0.1.0"
 
-[target.x86_64-unknown-linux-gnu.dependencies]
-servo-fontconfig = "0.2"
-servo-freetype-sys = "2.4.11"
-x11 = { version = "2.0.0", features = ["xlib"] }
-glx = "0.1.0"
-
-[target.arm-unknown-linux-gnueabihf.dependencies]
-servo-fontconfig = "0.2"
-servo-freetype-sys = "2.4.11"
-x11 = { version = "2.0.0", features = ["xlib"] }
-glx = "0.1.0"
-
-[target.armv7-unknown-linux-gnueabihf.dependencies]
-servo-fontconfig = "0.2"
-servo-freetype-sys = "2.4.11"
-x11 = { version = "2.0.0", features = ["xlib"] }
-glx = "0.1.0"
-
-[target.aarch64-unknown-linux-gnu.dependencies]
-servo-fontconfig = "0.2"
-servo-freetype-sys = "2.4.11"
-x11 = { version = "2.0.0", features = ["xlib"] }
-glx = "0.1.0"
-
-[target.arm-linux-androideabi.dependencies]
-servo-fontconfig = "0.2"
-servo-freetype-sys = "2.4.11"
+[target.'cfg(target_os = "android")'.dependencies]
 servo-egl = "0.2"
 
-[target.x86_64-pc-windows-gnu.dependencies]
-servo-fontconfig = "0.2"
-servo-freetype-sys = "2.4.11"
-
-[target.x86_64-apple-darwin.dependencies]
+[target.'cfg(target_os = "macos")'.dependencies]
 cgl = "0.1"
 io-surface = "0.2.0"
