--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "servo-skia"
-version = "0.20130412.12"
+version = "0.20130412.13"
 authors = ["The Skia Project Developers and The Servo Project Developers"]
 description = "2D graphic library for drawing Text, Geometries, and Images"
 license = "BSD-3-Clause"
@@ -28,7 +28,7 @@ name = "skia"
 cmake = "0.1"
 
 [dependencies]
-euclid = "0.7.0"
+euclid = ">=0.7.0, <0.9"
 gleam = "0.2"
 libc = "0.2"
 servo-glutin = "0.4"
