Fix cross-compile in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,8 +69,11 @@ if(NOT APPLE AND NOT WINDOWS_USE_DIRECTWRITE)
     if(FREETYPE_NOT_FOUND)
       message(FATAL_ERROR "Freetype is required by Skia for this build, but it was not built by the freetype crate nor found by pkg-config")
     endif()
+    EXEC_PROGRAM(pkg-config ARGS --libs freetype2 OUTPUT_VARIABLE FREETYPE_CLDFLAGS)
     message(STATUS "Using FREETYPE_CFLAGS: " ${FREETYPE_CFLAGS})
+    message(STATUS "Using FREETYPE_CLDFLAGS: " ${FREETYPE_CLDFLAGS})
     add_definitions(${FREETYPE_CFLAGS})
+    link_libraries(${FREETYPE_CLDFLAGS})
   endif()
 endif()
 
@@ -711,7 +714,7 @@ set(SKIA_SRC
   ${SKIA_UTILS_PLATFORM_SRC}
   )
 
-if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64|AMD64|x86)")
+if($ENV{TARGET} MATCHES "(i386|x86_64)-.*")
   set(SKIA_SRC ${SKIA_SRC} ${SKIA_OPTS_SSE2_SRC})
   set(SKIA_SRC ${SKIA_SRC} ${SKIA_OPTS_SSSE3_SRC})
   if(NOT MSVC)
@@ -723,7 +726,7 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "(x86_64|AMD64|x86)")
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /arch:SSE2")
     endif()
   endif()
-elseif($ENV{TARGET} MATCHES ".*arm.*")
+elseif($ENV{TARGET} MATCHES "arm-.*")
   set(SKIA_SRC ${SKIA_SRC} ${SKIA_OPTS_ARM_SRC})
   add_definitions(-mfpu=neon -D__ARM_HAVE_OPTIONAL_NEON_SUPPORT)
   # FIXME: Need more advanced detection of FP support
@@ -736,7 +739,7 @@ elseif($ENV{TARGET} MATCHES ".*arm.*")
     # FIXME: Assumes armv7 for cross compile
     add_definitions(-march=armv7-a -mthumb)
   endif()
-elseif($ENV{TARGET} MATCHES ".*aarch64.*")
+elseif($ENV{TARGET} MATCHES "aarch64-.*")
   set(SKIA_SRC ${SKIA_SRC} ${SKIA_OPTS_AARCH64_SRC})
   add_definitions(-D__ARM_HAVE_NEON)
 endif()
